Fixed title wrapping on small screens

--- a/views/includes/styles/_header.scss
+++ b/views/includes/styles/_header.scss
@@ -10,4 +10,5 @@
   letter-spacing: -1px;
   margin: 15px 0 30px;
   font-weight: normal;
+  line-height: 1em;
 }
